feat(client): Display user score, improve display

--- a/client/src/components/MamixtaButton/styles.module.css
+++ b/client/src/components/MamixtaButton/styles.module.css
@@ -2,12 +2,15 @@
   padding: 12px;
   font-size: 2rem;
   font-weight: bold;
-  background-color: #81c784;
-  color: #064709;
   border: none;
   border-radius: 12px;
+  background-color: #81c784;
+  color: #064709;
+  opacity: 0.6;
+  cursor: not-allowed;
 }
 
 .pointer {
   cursor: pointer;
+  opacity: 1;
 }
