--- a/client/src/components/Deck/styles.module.css
+++ b/client/src/components/Deck/styles.module.css
@@ -1,7 +1,21 @@
 .deckContainer {
-  margin-top: 24px;
+  margin: auto 0 36px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 250px;
+}
+
+.score {
+  border: 3px solid #06d6a0;
+  color: #21af89;
+  border-radius: 100%;
+  padding: 2px;
+  margin-top: 12px;
+  font-weight: bold;
+  width: 36px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
