--- a/client/src/components/PlayerHand/styles.module.css
+++ b/client/src/components/PlayerHand/styles.module.css
@@ -1,4 +1,4 @@
-.deckContainer {
+.handContainer {
   margin: auto 0 36px;
   display: flex;
   flex-direction: column;
@@ -7,6 +7,7 @@
 }
 
 .scoreContainer {
+  width: 400px;
   margin-top: 24px;
   display: flex;
   justify-content: space-between;
