--- a/client/src/components/Room/styles.module.css
+++ b/client/src/components/Room/styles.module.css
@@ -1,7 +1,10 @@
 .mainContainer {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   height: 100vh;
+  max-width: 1200px;
 }
 
 .cardsArea {
