--- a/client/src/components/Player/OtherPlayers/OtherPlayerHand/styles.module.css
+++ b/client/src/components/Player/OtherPlayers/OtherPlayerHand/styles.module.css
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .scoreContainer {
   display: flex;
   justify-content: space-between;
