--- a/client/src/components/Room/styles.module.css
+++ b/client/src/components/Room/styles.module.css
@@ -7,6 +7,11 @@
   max-width: 1200px;
 }
 
+.endRoundContainer {
+  display: flex;
+  justify-content: center;
+}
+
 .cardsArea {
   display: flex;
   justify-content: center;
