--- a/client/src/components/Room/styles.module.css
+++ b/client/src/components/Room/styles.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  height: calc(100vh - 48px);
   max-width: 1200px;
 }
 
