--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 body {
   background-color: #ebf4ff;
   margin: 0;
+  padding: 24px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
