--- a/client/src/components/EndRound/styles.module.css
+++ b/client/src/components/EndRound/styles.module.css
@@ -22,6 +22,12 @@
   text-align: center;
 }
 
+.endGameText {
+  margin-bottom: 24px;
+  font-size: 32px;
+  text-align: center;
+}
+
 .winnerUsername {
   font-weight: bold;
   font-size: 24px;
