--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,29 @@
+@font-face {
+  font-family: 'Alloy';
+  src: local('Alloy'), url(./assets/fonts/alloy.otf) format('opentype');
+}
+
+@font-face {
+  font-family: 'Kurril';
+  src: local('Kurril'), url(./assets/fonts/kurril.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Simplicity';
+  src: local('Simplicity'), url(./assets/fonts/simplicity.ttf) format('truetype');
+}
+
 body {
+  color: #1a202c;
   background-color: #ebf4ff;
   margin: 0;
   padding: 24px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+  font-family: 'Kurril', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+button {
+  font-family: 'Kurril';
 }
