--- a/client/src/components/Lobby/styles.module.css
+++ b/client/src/components/Lobby/styles.module.css
@@ -4,7 +4,7 @@
 
 .title {
   margin-top: 0;
-  color: #2c5282;
+  color: #3182ce;
   text-align: center;
   font-size: 76px;
   font-family: 'Alloy';
@@ -29,21 +29,6 @@
 
 .indigo {
   color: #4c51bf;
-}
-
-.linkText {
-  font-style: italic;
-  font-size: 24px;
-  text-align: center;
-}
-
-.link,
-a:link,
-a:visited {
-  text-align: center;
-  font-weight: bold;
-  font-size: 32px;
-  color: #2c5282;
 }
 
 .playersContainer {
@@ -85,6 +70,7 @@ a:visited {
 .playButton {
   padding: 12px;
   font-size: 2rem;
+  height: 60px;
   font-weight: bold;
   border: none;
   border-radius: 12px;
@@ -92,6 +78,11 @@ a:visited {
   color: #f0fff4;
   cursor: pointer;
   border-bottom: 4px solid #2f855a;
+}
+
+.playButton:active {
+  transform: translateY(2px);
+  border-bottom: 2px solid #48bb78;
 }
 
 .error {
@@ -135,6 +126,7 @@ a:visited {
 .updateButton {
   margin-top: 24px;
   padding: 12px;
+  height: 60px;
   font-size: 2rem;
   font-weight: bold;
   border: none;
@@ -143,4 +135,9 @@ a:visited {
   color: #f0fff4;
   cursor: pointer;
   border-bottom: 4px solid #4c51bf;
+}
+
+.updateButton:active {
+  transform: translateY(2px);
+  border-bottom: 2px solid #667eea;
 }
