--- a/client/src/components/Lobby/styles.module.css
+++ b/client/src/components/Lobby/styles.module.css
@@ -69,7 +69,7 @@
 }
 
 .playButton {
-  padding: 12px;
+  padding: 0 12px;
   font-size: 2rem;
   height: 60px;
   font-weight: bold;
@@ -126,7 +126,7 @@
 
 .updateButton {
   margin-top: 24px;
-  padding: 12px;
+  padding: 0 12px;
   height: 60px;
   font-size: 2rem;
   font-weight: bold;
