--- a/client/src/components/Room/styles.module.css
+++ b/client/src/components/Room/styles.module.css
@@ -17,3 +17,9 @@
   display: flex;
   justify-content: center;
 }
+
+@media screen and (max-height: 900px) {
+  .cardsArea {
+    margin-top: 0;
+  }
+}
