--- a/client/src/components/GenericCard/styles.module.css
+++ b/client/src/components/GenericCard/styles.module.css
@@ -40,6 +40,34 @@
   height: 75px;
 }
 
+@media screen and (max-height: 900px) {
+  .baseCard {
+    width: 90px;
+    height: 125px;
+  }
+
+  .handCard {
+    width: 90px;
+    height: 125px;
+  }
+
+  .falseCard {
+    width: 90px;
+    height: 125px;
+  }
+
+  .stackCard {
+    width: 90px;
+    height: 125px;
+  }
+
+  .otherPlayerCard {
+    width: 43px;
+    height: 60px;
+    margin-right: -24px;
+  }
+}
+
 .last {
   margin-right: 0;
 }
