--- a/client/src/components/Room/styles.module.css
+++ b/client/src/components/Room/styles.module.css
@@ -1,5 +1,6 @@
 .mainContainer {
   margin: 0 auto;
+  padding: 24px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
