feat(layout): Improve layout for small height devices

--- a/client/src/components/Avatar/AvatarImage/styles.module.css
+++ b/client/src/components/Avatar/AvatarImage/styles.module.css
@@ -1,6 +1,13 @@
 .avatar {
   cursor: pointer;
   padding: 6px;
+  width: 50px;
+}
+
+@media screen and (max-height: 850px) {
+  .avatar {
+    width: 30px;
+  }
 }
 
 .selected {
