feat: Add yaniv caller

--- a/client/src/components/EndRound/styles.module.css
+++ b/client/src/components/EndRound/styles.module.css
@@ -22,6 +22,11 @@
   text-align: center;
 }
 
+.yanivCallerContainer {
+  display: flex;
+  align-items: center;
+}
+
 .endGameText {
   margin-bottom: 24px;
   font-size: 32px;
