--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,6 +24,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+:root {
+  font-size: 0.75em;
+}
+
+@media screen and (min-height: 850px) {
+  :root {
+    font-size: 1em;
+  }
+}
+
 body {
   color: #1a202c;
   background-color: #ebf4ff;
